Fixed footer spacing

--- a/assets/css/phoenix.css
+++ b/assets/css/phoenix.css
@@ -147,3 +147,20 @@ header section :last-child {
     margin: 2rem 1rem;
   }
 }
+
+
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+#content-wrap {
+  padding-bottom: 2.5rem;    /* Footer height */
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 2.5rem;            /* Footer height */
+}
